blog page updated

--- a/html/category2.html
+++ b/html/category2.html
@@ -74,7 +74,7 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Blog <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
                       <ul class="sub-menu">
-                        <li><a href="blog.html">Blog-1</a></li>
+                        <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
@@ -123,46 +123,14 @@
     <!-- search-bar section end -->
 
 
-     <!-- shop banner section start -->
-    <section class="shop-banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                        <div id="shop-banner" class="owl-carousel owl-theme">
-                            <div class="item">
-                                <a href="shop2.html" class="shop-banner-img d-flex align-items-center justify-content-center">
-                                    <img src="../img/shop-banner-1.webp" alt="">
-                                </a>
-                            </div>
-
-                            <div class="item">
-                                <a href="shop2.html" class="shop-banner-img d-flex align-items-center justify-content-center">
-                                    <img src="../img/shop-banner-2.webp" alt="">
-                                </a>
-                            </div>
-
-                            <div class="item">
-                                <a href="shop2.html" class="shop-banner-img d-flex align-items-center justify-content-center">
-                                    <img src="../img/shop-banner-3.webp" alt="">
-                                </a>
-                            </div>
-                        </div>
-                </div>
-                <div class="col-md-3">
-                    <h5>Download Our App</h5>
-                </div>
-            </div>
-        </div>
-    </section>
-     <!-- shop banner section end -->
-
-     <!-- flash sell section start -->
-      <section class="flash-sell">
+    <!-- top categories section start -->
+    <section class="top-categories">
         <div class="container">
             <!-- section header -->
             <div class="shop-section-header">
-                <h4>Flash Sell</h4>
+                <h1>Top Categories</h1>
             </div>
+            
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="pro-content">
@@ -170,54 +138,32 @@
                             <img src="../img/p-1.png"  alt="">
                         </div>
                         <div class="pro-details">
-                            <h5>Product Name</h5>
-                            <h6>brand</h6>
-                            <p>$ <span>500</span> 400 </p>
-                            <div class="d-flex justify-content-between">
-                                <a href="#">+ add to cart</a>
-                                <a href="#"> <i class="fa fa-heart"></i> </a>
-                            </div>
+                            <h5>Category Name</h5>
                         </div>
                     </div>
-                </div> <!--Product end-->
+                </div> <!--Category end-->
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="pro-content">
-                        <span class="arrivals">New</span>
-
                         <div class="pro-img d-flex align-items-center justify-content-center" >
                             <img src="../img/p-2.png"  alt="">
                         </div>
                         <div class="pro-details">
-                            <h5>Product Name</h5>
-                            <h6>brand</h6>
-                            <p>$ <span>500</span> 400 </p>
-                            <div class="d-flex justify-content-between">
-                                <a href="#">+ add to cart</a>
-                                <a href="#"> <i class="fa fa-heart"></i> </a>
-                            </div>
+                            <h5>Category Name</h5>
                         </div>
                     </div>
-                </div> <!--Product end-->
+                </div> <!--Category end-->
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="pro-content">
-                        <span class="arrivals">New</span>
-
                         <div class="pro-img d-flex align-items-center justify-content-center" >
                             <img src="../img/p-3.png"  alt="">
                         </div>
                         <div class="pro-details">
-                            <h5>Product Name</h5>
-                            <h6>brand</h6>
-                            <p>$ <span>500</span> 400 </p>
-                            <div class="d-flex justify-content-between">
-                                <a href="#">+ add to cart</a>
-                                <a href="#"> <i class="fa fa-heart"></i> </a>
-                            </div>
+                            <h5>Category Name</h5>
                         </div>
                     </div>
-                </div> <!--Product end-->
+                </div> <!--Category end-->
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="pro-content">
@@ -225,24 +171,158 @@
                             <img src="../img/p-4.png"  alt="">
                         </div>
                         <div class="pro-details">
-                            <h5>Product Name</h5>
-                            <h6>brand</h6>
-                            <p>$ <span>500</span> 400 </p>
-                            <div class="d-flex justify-content-between">
-                                <a href="#">+ add to cart</a>
-                                <a href="#"> <i class="fa fa-heart"></i> </a>
-                            </div>
+                            <h5>Category Name</h5>
                         </div>
                     </div>
-                </div> <!--Product end-->
+                </div> <!--Category end-->
 
-                <div class="col-lg-12 d-flex justify-content-end show-all">
-                    <a href="shop2.html"> Show all... </a>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-1.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-2.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-3.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-4.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-1.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-2.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-3.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-4.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-1.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-2.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-3.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                    <div class="pro-content">
+                        <div class="pro-img d-flex align-items-center justify-content-center" >
+                            <img src="../img/p-4.png"  alt="">
+                        </div>
+                        <div class="pro-details">
+                            <h5>Category Name</h5>
+                        </div>
+                    </div>
+                </div> <!--Category end-->
+
+                <div class="col-lg-12 ">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                          <li class="page-item"><a class="page-link" href="#">1</a></li>
+                          <li class="page-item"><a class="page-link" href="#">2</a></li>
+                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                      </nav>
                 </div>
             </div>
         </div>
-      </section>
-     <!-- flash sell section end -->
+    </section>
+    <!-- top categories section end -->
 
     <!-- New arrival section start -->
     <section class="new-arrival">
@@ -251,6 +331,7 @@
         <div class="shop-section-header">
             <h4>New Arrivals</h4>
         </div>
+
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                 <div class="pro-content">
@@ -334,67 +415,6 @@
     </div>
     </section>
     <!-- New arrival section end -->
-
-    <!-- top categories section start -->
-    <section class="top-categories">
-        <div class="container">
-            <!-- section header -->
-            <div class="shop-section-header">
-                <h4>Top Categories</h4>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="pro-content">
-                        <div class="pro-img d-flex align-items-center justify-content-center" >
-                            <img src="../img/p-1.png"  alt="">
-                        </div>
-                        <div class="pro-details">
-                            <h5>Category Name</h5>
-                        </div>
-                    </div>
-                </div> <!--Category end-->
-
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="pro-content">
-                        <div class="pro-img d-flex align-items-center justify-content-center" >
-                            <img src="../img/p-2.png"  alt="">
-                        </div>
-                        <div class="pro-details">
-                            <h5>Category Name</h5>
-                        </div>
-                    </div>
-                </div> <!--Category end-->
-
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="pro-content">
-                        <div class="pro-img d-flex align-items-center justify-content-center" >
-                            <img src="../img/p-3.png"  alt="">
-                        </div>
-                        <div class="pro-details">
-                            <h5>Category Name</h5>
-                        </div>
-                    </div>
-                </div> <!--Category end-->
-
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="pro-content">
-                        <div class="pro-img d-flex align-items-center justify-content-center" >
-                            <img src="../img/p-4.png"  alt="">
-                        </div>
-                        <div class="pro-details">
-                            <h5>Category Name</h5>
-                        </div>
-                    </div>
-                </div> <!--Category end-->
-
-                <div class="col-lg-12 d-flex justify-content-end show-all">
-                    <a href="category2.html"> Show all... </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- top categories section end -->
 
 
     <!-- footer section start -->
