--- a/html/home.html
+++ b/html/home.html
@@ -72,9 +72,9 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Blog <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
+                      <a class="nav-link" href="">Blog <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
                       <ul class="sub-menu">
-                        <li><a href="">Page</a></li>
+                        <li><a href="blog.html">Blog-1</a></li>
                         <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
