added buy now and product details page

--- a/html/blog.html
+++ b/html/blog.html
@@ -62,7 +62,7 @@
 
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pages <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
+                      <a class="nav-link">Pages <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
                       <ul class="sub-menu">
                         <li><a href="">Page</a></li>
                         <li><a href="">Page</a></li>
