--- a/html/home.html
+++ b/html/home.html
@@ -47,7 +47,11 @@
                     </li>
 
                     <li class="nav-item ">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                      <a class="nav-link" href="buy-now.html">Buy Now</a>
+                    </li>
+
+                    <li class="nav-item ">
+                      <a class="nav-link" href="shop.html">Shop</a>
                     </li>
 
                     <li class="nav-item">
