--- a/html/login.html
+++ b/html/login.html
@@ -46,6 +46,11 @@
                       <a class="nav-link" href="home.html">Home</a>
                     </li>
 
+
+                    <li class="nav-item ">
+                      <a class="nav-link" href="buy-now.html">Buy Now</a>
+                    </li>
+
                     <li class="nav-item ">
                         <a class="nav-link" href="shop.html">Shop</a>
                     </li>
