--- a/html/signup.html
+++ b/html/signup.html
@@ -50,6 +50,10 @@
                         <a class="nav-link" href="shop.html">Shop</a>
                     </li>
 
+                    <li class="nav-item ">
+                      <a class="nav-link" href="buy-now.html">Buy Now</a>
+                    </li>
+
                     <li class="nav-item">
                       <a class="nav-link" href="#">Categories <span class="ms-1" style="font-size: 16px;"><i class="fas fa-angle-down"></i></span> </a>
                       <ul class="sub-menu">
