--- a/html/product-details.html
+++ b/html/product-details.html
@@ -99,7 +99,7 @@
                     <a class="nav-icon" href="#">
                       <i class="fa-regular fa-heart"></i> <span class="icon-badge">9</span>
                     </a>
-                    <a class="nav-icon" href="#">
+                    <a class="nav-icon" href="carts.html">
                       <i class="fa-solid fa-cart-shopping"></i> <span class="icon-badge">9</span>
                     </a>
                   </div>
@@ -164,6 +164,7 @@
                     </div>
                 </div>
                 <div class="col-md-7">
+                  <form action="">
                     <div class="details">
                         <h4>Product name</h4>
                         <h6>Brand name</h6>
@@ -176,7 +177,7 @@
                         <div class="variant my-3">
                             <div class="row">
                                 <!-- size -->
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h5><color>S</color>ize</h5>
                                     <div class="d-flex justify-content-start align-items-center">
                                         <div class="form-check mr-2 mb-2">
@@ -197,7 +198,7 @@
                                 </div> <!--size-->
 
                                 <!-- color -->
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h5> <color>C</color>olor</h5>
                                     <div class="d-flex justify-content-start align-items-center flex-wrap">
                                         <div class="form-check mr-2 mb-2">
@@ -218,7 +219,7 @@
                                 </div><!--color-->
 
                                 <!-- quanity -->
-                                 <div class="col-md-12">
+                                 <div class="col-md-4">
                                     <h5> <color>Q</color>uantity</h5>
                                     <p class="qty">
                                         <button class="qtyminus" aria-hidden="true">&minus;</button>
@@ -235,6 +236,7 @@
                             <a href="#" class="theme-btn">Buy Now <i class="ml-3 fa fa-truck"></i> </a>
                         </div>
                     </div>
+                  </form>
                 </div>
             </div>
         </div>
