--- a/html/signup.html
+++ b/html/signup.html
@@ -99,7 +99,7 @@
                     <a class="nav-icon" href="#">
                       <i class="fa-regular fa-heart"></i> <span class="icon-badge">9</span>
                     </a>
-                    <a class="nav-icon" href="#">
+                    <a class="nav-icon" href="carts.html">
                       <i class="fa-solid fa-cart-shopping"></i> <span class="icon-badge">9</span>
                     </a>
                   </div>
