--- a/html/carts.html
+++ b/html/carts.html
@@ -18,6 +18,7 @@
 
     <!-- style -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- sass -->
 
     <!-- owl carousel -->
      <link rel="stylesheet" href="../css/owl.carousel.min.css">
@@ -127,7 +128,7 @@
      <section class="cart-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-sm-8">
+          <div class="col-lg-8">
 
             <div class="table__body mb-5">
               <table class="table">
@@ -240,7 +241,7 @@
 
          
 
-          <div class="col-md-4 col-sm-4">
+          <div class="col-lg-4">
             <div class="cart-totals p-3 bg-light border shadow-sm rounded">
               <h4>Order Summary</h4>
               <hr>
@@ -269,6 +270,11 @@
                         <input type="text" class="ml-1 form-control" id="coupon" placeholder="Apply Coupon">
                         <button type="submit" class="ml-1 btn theme-btn">Submit</button>
                       </div>
+                      <div class="alert-success mt-2 m-1" role="alert">
+                        <small>
+                          <span class="text-primary">Congratulations!</span>  You got a discount of <span style="font-weight: 600;" class="text-primary">$<span id="coupon-discount" value="10">10</span></span> from the coupon.
+                        </small>
+                      </div>
                     </form>
                   </div> <!--coupon-->
                   <hr>
@@ -294,6 +300,238 @@
       </div>
      </section>
     <!-- cart section end -->
+
+
+    <!-- more product section start-->
+    <section class="flash-sell">
+      <div class="container">
+          <!-- section header -->
+          <div class="shop-section-header">
+              <h4>Shop more</h4>
+          </div>
+          <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+              <div class="pro-content">
+                  <div class="pro-img d-flex align-items-center justify-content-center" >
+                      <img src="../img/p-1.png"  alt="">
+                  </div>
+                  <div class="pro-details">
+                      <h5>Product Name</h5>
+                      <h6>brand</h6>
+                      <p>$ <span>500</span> 400 </p>
+                      <div class="d-flex justify-content-between">
+                          <a href="#">+ add to cart</a>
+                          <a href="#"> <i class="fa fa-heart"></i> </a>
+                      </div>
+                  </div>
+              </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-2.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-3.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-4.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="pro-content">
+                <div class="pro-img d-flex align-items-center justify-content-center" >
+                    <img src="../img/p-1.png"  alt="">
+                </div>
+                <div class="pro-details">
+                    <h5>Product Name</h5>
+                    <h6>brand</h6>
+                    <p>$ <span>500</span> 400 </p>
+                    <div class="d-flex justify-content-between">
+                        <a href="#">+ add to cart</a>
+                        <a href="#"> <i class="fa fa-heart"></i> </a>
+                    </div>
+                </div>
+            </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-2.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-3.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-4.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <div class="pro-content">
+                    <div class="pro-img d-flex align-items-center justify-content-center" >
+                        <img src="../img/p-1.png"  alt="">
+                    </div>
+                    <div class="pro-details">
+                        <h5>Product Name</h5>
+                        <h6>brand</h6>
+                        <p>$ <span>500</span> 400 </p>
+                        <div class="d-flex justify-content-between">
+                            <a href="#">+ add to cart</a>
+                            <a href="#"> <i class="fa fa-heart"></i> </a>
+                        </div>
+                    </div>
+                </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-2.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <span class="arrivals">New</span>
+
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-3.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                  <div class="pro-content">
+                      <div class="pro-img d-flex align-items-center justify-content-center" >
+                          <img src="../img/p-4.png"  alt="">
+                      </div>
+                      <div class="pro-details">
+                          <h5>Product Name</h5>
+                          <h6>brand</h6>
+                          <p>$ <span>500</span> 400 </p>
+                          <div class="d-flex justify-content-between">
+                              <a href="#">+ add to cart</a>
+                              <a href="#"> <i class="fa fa-heart"></i> </a>
+                          </div>
+                      </div>
+                  </div>
+              </div> <!--Product end-->
+
+              <div class="col-lg-12 d-flex justify-content-end show-all">
+                  <a href="shop2.html"> Show all... </a>
+              </div>
+          </div>
+      </div>
+    </section>
+    <!-- more product section end-->
 
 
      <!-- footer section start -->
