updated login form

--- a/html/login.html
+++ b/html/login.html
@@ -124,12 +124,16 @@
                             <div class="form-group">
                               <label for="exampleInputPassword1">Password</label>
                               <input type="password" class="form-control" placeholder="********" id="exampleInputPassword1">
+                              <small>
+                                Forgot Email or password? <a href="#">Click here</a>
+                              </small>
                             </div>
                             <div class="text-right">
                               <button type="submit" class="btn theme-btn">Login</button>
                             </div>
                             <div class="row">
                                 <div class="login-opt col-md-12 mt-3">
+
                                     <div class="login-txt text-center">
                                         Don't have account? <a href="signup.html">Signup here</a>
                                     </div>
