updated about.html and contact-us.html and updated js

--- a/html/delivery.html
+++ b/html/delivery.html
@@ -84,6 +84,13 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Contact</a>
                     </li>
+
+
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">About</a>
+                    </li>
+                      
+
                     
                   </ul>
                   <div class="form-inline my-2 my-lg-0">
