--- a/html/home.html
+++ b/html/home.html
@@ -22,9 +22,6 @@
     <!-- owl carousel -->
      <link rel="stylesheet" href="../css/owl.carousel.min.css">
      <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-
-
-
     <title>Ecommerce website!</title>
   </head>
   <body>
@@ -86,8 +83,14 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="contact-us.html">Contact</a>
                     </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">About</a>
+                    </li>
+                      
+
                     
                   </ul>
                   <div class="form-inline my-2 my-lg-0">
