--- a/html/shop.html
+++ b/html/shop.html
@@ -90,6 +90,13 @@
                       <a class="nav-link" href="#">Contact</a>
                     </li>
                     
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                        
+
+
                   </ul>
                   <div class="form-inline my-2 my-lg-0">
                     <i id="search-icon" class="fa-solid fa-magnifying-glass"></i>
