updated contact us section

--- a/html/contact-us-more.html
+++ b/html/contact-us-more.html
@@ -134,6 +134,21 @@
             <div class="contact-options">
 
                 <div class="row mb-3">
+
+                    <div class="col-lg-6 col-md-6 col-sm-12"></div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="search-option">
+                            <form action="#">
+                                <div class="d-flex justify-content-start">
+                                    <input class="form-control "type="search" name="search-contact" id="search-contact" placeholder="Search for options" outline="none">
+                                    <button class="btn btn-outline-success" type="submit">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div> <!--search-->
+                    
                     <div class="col-lg-4 col-md-4 col-sm-6 my-3">
                         <div class="option h-100">
                             <h5>
@@ -167,13 +182,56 @@
                             </p>
                         </div>
                     </div><!--option-->
+                    <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+                        <div class="option h-100">
+                            <h5>
+                                <i class="fa-solid fa-ban"></i>
+                                I want to cancel an order
+                            </h5>
+                            <p>
+                                Use our online cancellation form ot start your order cancellation.
+                            </p>
+                        </div>
+                    </div><!--option-->
+                    <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+                        <div class="option h-100">
+                            <h5>
+                                <i class="fa-solid fa-ban"></i>
+                                I want to cancel an order
+                            </h5>
+                            <p>
+                                Use our online cancellation form ot start your order cancellation.
+                            </p>
+                        </div>
+                    </div><!--option-->
+                    <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+                        <div class="option h-100">
+                            <h5>
+                                <i class="fa-solid fa-ban"></i>
+                                I want to cancel an order
+                            </h5>
+                            <p>
+                                Use our online cancellation form ot start your order cancellation.
+                            </p>
+                        </div>
+                    </div><!--option-->
+                    <div class="col-lg-4 col-md-4 col-sm-6 my-3">
+                        <div class="option h-100">
+                            <h5>
+                                <i class="fa-solid fa-ban"></i>
+                                I want to cancel an order
+                            </h5>
+                            <p>
+                                Use our online cancellation form ot start your order cancellation.
+                            </p>
+                        </div>
+                    </div><!--option-->
                 </div>
-                <a href="contact-us-more.html"> More... </a>
             </div>
+
         </div>
      </section>
     <!-- contact us section end -->
-
 
 
     <!-- footer section start -->
