updated contact us page

--- a/html/home.html
+++ b/html/home.html
@@ -720,7 +720,7 @@
               <div class="footer-item">
                 <h4>Section</h4>
                 <ul class="list-group">
-                  <li> <a href="">Link</a> </li>
+                  <li> <a href="help.html">Help</a> </li>
                   <li> <a href="">Link</a> </li>
                   <li> <a href="">Link</a> </li>
                   <li> <a href="">Link</a> </li>
